# patchpal

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  INTELLIGENT_PRUNING.md  PROACTIVE_PRUNING_SUMMARY.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
configuration/: index.html
context-management/: index.html
docs/: .gitignore  README.md  configuration.md  context-management.md  index.md  requirements.txt  safety.md  troubleshooting.md
docs/features/: custom-tools.md  memory.md  skills.md  tools.md
docs/getting-started/: index.md
docs/models/: local-models.md  offline-deployment.md  overview.md
docs/reference/: agent.md  context.md  custom-tools.md  skills.md  tools.md
docs/usage/: autopilot.md  examples.md  interactive.md  python-api.md
examples/: README.md
examples/ralph/: README.md  multi_phase_todo_api_example.py  simple_autopilot_example.py
examples/skills/add-tests/: SKILL.md
examples/skills/commit/: SKILL.md
examples/skills/review/: SKILL.md
examples/skills/skill-creator/: ATTRIBUTION.md  SKILL.md
examples/tools/: README.md  github_tools.py  system_tools.py
features/custom-tools/: index.html
features/memory/: index.html
features/skills/: index.html
features/tools/: index.html
getting-started/: index.html
models/local-models/: index.html
models/offline-deployment/: index.html
models/overview/: index.html
patchpal/: __init__.py  __main__.py  agent.py  autopilot.py  cli.py  context.py  permissions.py  skills.py  system_prompt.md  tool_schema.py  tools.py
patchpal/prompts/: system_prompt.md  system_prompt_simple.md
patchpal/tools/: __init__.py  code_analysis.py  common.py  definitions.py  file_editing.py  file_operations.py  git_tools.py  shell_tools.py  todo_tools.py  user_interaction.py  web_tools.py
reference/agent/: index.html
reference/context/: index.html
reference/custom-tools/: index.html
reference/skills/: index.html
reference/tools/: index.html
safety/: index.html
scripts/: setup-dev.sh
search/: search_index.json
tests/: __init__.py  test_agent.py  test_cli.py  test_context.py  test_custom_tools.py  test_guardrails.py  test_memory.py  test_operational_safety.py  test_permissions.py  test_simplified_prompt.py  test_skills.py  test_tools.py
troubleshooting/: index.html
usage/autopilot/: index.html
usage/examples/: index.html
usage/interactive/: index.html
usage/python-api/: index.html
